# vvc-cnn-inter-enhancement

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
decoder/: config.py  decoders.py  manager.py
encoder/: config.py  dataset_mgr.py  encoders.py  manager.py
enhancer/: __main__.py  config.py  datamodule.py  vtm_dataset.py
enhancer/tests/: test_config.yaml  test_datamodule.py  test_dataset.py
features_generator/: generator.py  generator_test.py
features_parser/: parser.py  test_parser.py  tokens.py
utils/: fetch_dataset.py  yuv_to_macos.py  yuv_to_y4m.py
